PushGaming - code review fix